<resources>


    <string name="app_name">DailyRation</string>
    <string-array name="capabilitiesMenu">
        <item>Home</item>
        <item>Add Product</item>
        <item>Product list</item>
        <item>New ingestion</item>
        <item>Daily calories</item>
        <item>Exit</item>
    </string-array>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addName">Name of product</string>
    <string name="calories">Calories</string>
    <string name="proteins">Proteines</string>
    <string name="fats">Fats</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="cellulose">Cellulose</string>
    <string name="addConfirm">Add</string>

    <string name="myMail"><u>roman3920@yandex.ua</u></string>
    <string name="addButton">Add</string>
    <string name="helloTV">Welcome!!!</string>
    <string name="addProdButton">Add Product</string>
    <string name="prodListButton">Product list</string>
    <string name="newIngButton">New ingestion</string>
    <string name="dailyCalButton">Daily Calories</string>
    <string name="exitButton">Exit</string>
</resources>
