<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hfad.daylyration.AddProductFragment">

    ]
    <EditText android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addName" />

    <EditText android:id="@+id/calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calories" />

    <EditText android:id="@+id/proteins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/proteins" />

    <EditText android:id="@+id/fats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fats" />

    <EditText android:id="@+id/carbohydrates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carbohydrates" />

    <EditText android:id="@+id/cellulose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cellulose" />

    <Button
        android:id="@+id/addConfirm"
        android:layout_height="wrap_content"
        android:layout_width="160dp"
        android:layout_gravity="end"
        android:text="@string/addButton" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:text="" />

</LinearLayout>
