<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/topFLLayout"
    tools:context="com.hfad.daylyration.TopFragment">

    <TextView
        android:id="@+id/helloTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helloTV"
        android:textSize="30dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/addProdButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addProdButton" />
    <Button
        android:id="@+id/prodListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prodListButton" />
    <Button
        android:id="@+id/newIngButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newIngButton" />
    <Button
        android:id="@+id/dailyCalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dailyCalButton" />
    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exitButton" />

</LinearLayout>
